--- a/.dprint.jsonc
+++ b/.dprint.jsonc
@@ -1,4 +1,5 @@
 {
+  "indentWidth": 4,
   "excludes": [
     // These files are auto-generated and don't need to be formatted.
     // NOTE: We generally prefer that packages be formatted with dprint.
